...
                  fit: BoxFit.contain,
                  width: 34,
                ),
                label: "Projects",
                icon: Image.asset(
                  "images/Project_IMG.png",
                  key: const Key('app-projects-nav'),
                  fit: BoxFit.contain,
                  width: 34,
                ),
              ),
              BottomNavigationBarItem(
                activeIcon: Image.asset(
...
                  fit: BoxFit.contain,
                  width: 34,
                ),
                label: "Report",
                icon: Image.asset(
                  "images/report_appBar.png",
                  key: const Key('app-report-nav'),
                  fit: BoxFit.contain,
                  width: 34,
                ),
              ),
            ],
            currentIndex: selectedIndex,
...
