...
    return ConstrainedBox(
      constraints: const BoxConstraints(maxWidth: 210),
      child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          GestureDetector(
            key: const Key('forecast-button'),
            onTap: () {
              showDialog(
                      context: context,
                      builder: (BuildContext context) => ForecastSprints(
                          startDate, sprintLength, projectId, numberSprints))
                  .then((value) async {
...
  }

  forecastCancelButton() {
    return ConstrainedBox(
      constraints: const BoxConstraints(maxWidth: 210),
      child: GestureDetector(
        key: const Key('forecast-cancel-button'),
        onTap: () async {
          setState(() {
            numbForecastSprints = 0;
            selectRanger = const RangeValues(1, 1);
          });
          await loadDataReport();
...
