...
        ),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            const AutoSizeText(
              'List of Unallocated Employees',
              maxLines: 1,
              style: TextStyle(
                fontFamily: "mont",
                color: Colors.black,
                fontSize: 20,
              ),
...
