...
              fixedSize: const Size(70, 70),
              shadowColor: Colors.black,
              elevation: 10.0,
            ),
            child: const Icon(
              Icons.add,
              key: Key('assigment-user'),
              size: 30,
              color: Colors.black,
            ),
          ),
        ),
      ),
...
